@@ -15,7 +15,7 @@
 #    limitations under the License.
 #
 
-export JAVA_HOME=/usr/java/jdk-20
+export JAVA_HOME=/usr/java/jdk-21
 echo ${JAVA_HOME}
 # ''单引号原样输出。""双引号可调用变量输出
 echo '切换到工作目录'
@@ -24,6 +24,6 @@ cd /opt/app
 echo '授权当前用户'
 chmod 555 ./*.jar
 echo '执行....'
-nohup ${JAVA_HOME}/bin/java -Xms500m -Xmx1024m --enable-preview --add-modules jdk.incubator.concurrent -XX:+UseZGC \
+nohup ${JAVA_HOME}/bin/java -Xms500m -Xmx1024m --enable-preview -XX:+UseZGC \
   -jar valentine-starter.jar >elog.out 2>&1 &
 echo '启动成功'
